# cvat

./: .gitignore  Makefile  README.sandau.md  Taskfile.yml  docker-compose.yml  pyproject.toml
cvat-ui/src/: icons.tsx
cvat-ui/src/components/login-page/: login-form.tsx
cvat-ui/src/components/signing-common/: signing-layout.tsx
cvat/settings/: base.py
scripts/: README.md  install_nuctl.sh  mount_nfs_drive.sh  provision_users.py
serverless/pytorch/facebookresearch/segment_anything_2/nuclio/: function-gpu.yaml  main.py  model_handler.py
serverless/pytorch/ultralytics/yolov8/nuclio/: README.md  function-gpu.yaml  main.py
