[project]
name = "cvat"
version = "0.1.0"
description = "Sandau's fork of CVAT"
authors = [
    { name = "Matt Dresser", email = "matt@sandau.dev" }
]
dependencies = [
    "sam-2 @ git+https://github.com/facebookresearch/sam2.git",
    "segment-anything>=1.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/cvat"]

[tool.isort]
profile = "black"
forced_separate = ["tests"]
line_length = 100
skip_gitignore = true # align tool behavior with Black

[tool.black]
line-length = 100
target-version = ['py39']
extend-exclude = """
# TODO: get rid of these
^/cvat/apps/(
    dataset_manager|dataset_repo|engine|events
    |health|iam|lambda_manager|log_viewer
    |organizations|webhooks
)/
| ^/cvat/settings/
| ^/serverless/
| ^/utils/dataset_manifest/
"""
